# IR_system

./: CMakeLists.txt
documents/mini/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
include/IR/: BooleanIR.hpp  textProcessing.hpp
src/: CMakeLists.txt
src/booleanInvertedIR/: CMakeLists.txt  main.cpp
src/booleanR/: CMakeLists.txt  main.cpp
src/imp/: BooleanIR.cpp  CMakeLists.txt  textProcessing.cpp
src/textProc/: CMakeLists.txt  main.cpp
